--- a/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/src/PortfolioContainer/Home/Profile/Profile.css
@@ -32,7 +32,7 @@
 }
 .profile-role-tagline {
   font-size: 19px;
-  margin: 5px 0 0 0;
+  margin: 5px 0 0 5px;
   font-family: "Poppins Light";
 }
 .profile-options .highlighted-btn {
@@ -72,8 +72,10 @@
   color: white;
   padding: 8px;
   padding-left: 0px;
+  font-size: 20px;
+  margin: 5px;
 }
-.colz .cols-icon i:hover {
+.colz .colz-icon a i:hover {
   transform: scale(1.5);
 }
 
@@ -87,6 +89,10 @@
   }
   .profile-details-role .primary-text {
     font: 12px;
+    padding: 5px;
+  }
+  .profile-options {
+    margin: 11px;
   }
   .profile-options .btn {
     width: 120px;
